refactor: bump java and reformat large parts of code